# skynix-ai-noc

./: README.md
agent/: pyproject.toml
agent/ai_noc_agent/: main.py
core/: pyproject.toml
core/ai_noc_core/: __init__.py  db.py  ingest.py  main.py  rawstore.py  rules.py  security.py
core/tests/: test_rules.py
examples/: agent-config.yml  core.Dockerfile  docker-compose.yml
migrations/: 001_initial.sql
