[project]
name = "ai-noc-core"
version = "0.1.0"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "psycopg[binary]>=3.1",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
ai-noc-core = "ai_noc_core.main:run"

[tool.pytest.ini_options]
pythonpath = ["."]
